--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+<% if $redis.get("current_day_color") %>
+  <%= $redis.get("current_day_color") %>
+<% end %>
