--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap/dist/css/bootstrap
- *= require font-awesome/css/font-awesome
+ *= require font-awesome
  *= require college_green/theme
  *= require_tree .
  *= require_self
