Add the red style

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require bootstrap/dist/css/bootstrap
  *= require font-awesome
  *= require college_green/theme
+ *= require college_green/styles-red
  *= require_tree .
  *= require_self
  */
