--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -14,58 +14,82 @@
         %span.main Dedicated Staff
         %br/
         %span.secondary.clearfix Delivering quality education since 1956
-%section.news
-  %h1.section-heading.text-highlight
-    %span.line Latest News
-  .carousel-controls
-    %a.prev{"data-slide" => "prev", :href => "#news-carousel"}
-      %i.fa.fa-caret-left
-    %a.next{"data-slide" => "next", :href => "#news-carousel"}
-      %i.fa.fa-caret-right
-  .section-content.clearfix
-    #news-carousel.news-carousel.carousel.slide
-      .carousel-inner
-        .item.active
-          .col-md-4.news-item
-            %h2.title
-              %a{href: "#"} Some announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-4.news-item
-            %h2.title
-              %a{href: "#"} Another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-4.news-item
-            %h2.title
-              %a{href: "#"} Yet another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-        .item
-          .col-md-4.news-item
-            %h2.title
-              %a{href: "#"} No way, another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-4.news-item
-            %h2.title
-              %a{href: "#"} Another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-4.news-item
-            %h2.title
-              %a{href: "#"} Yet another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
+
+.row
+  .col-md-9
+    %section.news
+      %h1.section-heading.text-highlight
+        %span.line Latest News
+      .carousel-controls
+        %a.prev{"data-slide" => "prev", :href => "#news-carousel"}
+          %i.fa.fa-caret-left
+        %a.next{"data-slide" => "next", :href => "#news-carousel"}
+          %i.fa.fa-caret-right
+      .section-content.clearfix
+        #news-carousel.news-carousel.carousel.slide
+          .carousel-inner
+            .item.active
+              .col-md-4.news-item
+                %h2.title
+                  %a{href: "#"} Some announcement!
+                %p Some long and boring announcement.
+                %a.read-more{:href => "news-single.html"}
+                  Read more
+                  %i.fa.fa-chevron-right
+              .col-md-4.news-item
+                %h2.title
+                  %a{href: "#"} Another announcement!
+                %p Some long and boring announcement.
+                %a.read-more{:href => "news-single.html"}
+                  Read more
+                  %i.fa.fa-chevron-right
+              .col-md-4.news-item
+                %h2.title
+                  %a{href: "#"} Yet another announcement!
+                %p Some long and boring announcement.
+                %a.read-more{:href => "news-single.html"}
+                  Read more
+                  %i.fa.fa-chevron-right
+            .item
+              .col-md-4.news-item
+                %h2.title
+                  %a{href: "#"} No way, another announcement!
+                %p Some long and boring announcement.
+                %a.read-more{:href => "news-single.html"}
+                  Read more
+                  %i.fa.fa-chevron-right
+              .col-md-4.news-item
+                %h2.title
+                  %a{href: "#"} Another announcement!
+                %p Some long and boring announcement.
+                %a.read-more{:href => "news-single.html"}
+                  Read more
+                  %i.fa.fa-chevron-right
+              .col-md-4.news-item
+                %h2.title
+                  %a{href: "#"} Yet another announcement!
+                %p Some long and boring announcement.
+                %a.read-more{:href => "news-single.html"}
+                  Read more
+                  %i.fa.fa-chevron-right
+  .col-md-3
+    %section.links
+      %h1.section-heading.text-highlight
+        %span.line Quick Links
+      .section-content
+        %p
+          %a{:href => "ic.syosset.k12.ny.us"}
+            %i.fa.fa-caret-right>
+            Infinite Campus
+        %p
+          %a{:href => "#"}
+            %i.fa.fa-caret-right>
+            Gallery
+        %p
+          %a{:href => "#"}
+            %i.fa.fa-caret-right>
+            Job Vacancies
+        %p
+          %a{:href => "#"}
+            %i.fa.fa-caret-right>
+            Contact
