--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -32,10 +32,17 @@
       %ul.nav.navbar-nav
         %li.active.nav-item
           = link_to t('nav.home'), root_path
+        %li.nav-item
+          = link_to t('nav.about'), "#"
         %li.nav-item.dropdown
           %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdown", :href => "#"}
-            = t('nav.courses')
+            = t('nav.departments')
             %i.fa.fa-angle-down
           %ul.dropdown-menu
-            %li
-              %a{href: "#"} Course list
+            %li= link_to "All #{t('nav.departments')}", "#"
+        %li.nav-item.dropdown
+          %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdown", :href => "#"}
+            = t('nav.extracurriculars')
+            %i.fa.fa-angle-down
+          %ul.dropdown-menu
+            %li= link_to "All #{t('nav.extracurriculars')}", "#"
