--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,35 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.super-hero-unit figure figcaption {
+  position: absolute;
+  top: 35%;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  text-shadow: 1.5px 1.5px 7px #222222;
+}
+
+.super-hero-unit figure figcaption h1 {
+    font-size: 350%;
+}
+
+.super-hero-unit figure {
+  position: relative;
+}
+
+/* Portrait phones and smaller */
+@media (max-width: 767px) {
+  .super-hero-unit figure figcaption h1 {
+      font-size: 200%;
+      position: absolute;
+      text-align: center;
+      top: 30%;
+      width: 100%;
+  }
+
+  .super-hero-unit figure {
+    position: relative;
+  }
+}
