--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -46,3 +46,12 @@
             %i.fa.fa-angle-down
           %ul.dropdown-menu
             %li= link_to "All #{t('nav.extracurriculars')}", "#"
+      %ul.nav.navbar-nav.pull-right
+        %li.nav-item
+          %a{href: "#"}
+            - color = $redis.get("current_day_color")
+            - if color
+              Today is a
+              = color
+            - else
+              No school today!
