--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -2,9 +2,10 @@
   .header-main.container
     .container
       %h1.logo.pull-left
-        = svg 'logo'
-        .full-name.pull-right.visible-lg
-          = svg 'full_name'
+        = link_to root_path do
+          = svg 'logo'
+          .full-name.pull-right.visible-lg
+            = svg 'full_name'
       .info.col-md-4-col-sm-4.pull-right
         %br
         %br
