Fit in another announcement on the welcome page

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -7,7 +7,9 @@
 .footer {
   height: auto;
 }
-
 .header-main {
   padding: 15px 0 !important;
+}
+.home-page .news .news-item {
+  padding-left: 0px;
 }
