--- a/app/views/welcome/_announcements.haml
+++ b/app/views/welcome/_announcements.haml
@@ -10,45 +10,59 @@
     #news-carousel.news-carousel.carousel.slide
       .carousel-inner
         .item.active
-          .col-md-4.news-item
+          .col-md-3.news-item
             %h2.title
               %a{href: "#"} Some announcement!
             %p Some long and boring announcement.
             %a.read-more{:href => "news-single.html"}
               Read more
               %i.fa.fa-chevron-right
-          .col-md-4.news-item
+          .col-md-3.news-item
             %h2.title
               %a{href: "#"} Another announcement!
             %p Some long and boring announcement.
             %a.read-more{:href => "news-single.html"}
               Read more
               %i.fa.fa-chevron-right
-          .col-md-4.news-item
+          .col-md-3.news-item
             %h2.title
               %a{href: "#"} Yet another announcement!
             %p Some long and boring announcement.
             %a.read-more{:href => "news-single.html"}
               Read more
               %i.fa.fa-chevron-right
+          .col-md-3.news-item
+            %h2.title
+              %a{href: "#"} Some announcement!
+            %p Some long and boring announcement.
+            %a.read-more{:href => "news-single.html"}
+              Read more
+              %i.fa.fa-chevron-right
         .item
-          .col-md-4.news-item
+          .col-md-3.news-item
             %h2.title
               %a{href: "#"} No way, another announcement!
             %p Some long and boring announcement.
             %a.read-more{:href => "news-single.html"}
               Read more
               %i.fa.fa-chevron-right
-          .col-md-4.news-item
+          .col-md-3.news-item
             %h2.title
               %a{href: "#"} Another announcement!
             %p Some long and boring announcement.
             %a.read-more{:href => "news-single.html"}
               Read more
               %i.fa.fa-chevron-right
-          .col-md-4.news-item
+          .col-md-3.news-item
             %h2.title
               %a{href: "#"} Yet another announcement!
+            %p Some long and boring announcement.
+            %a.read-more{:href => "news-single.html"}
+              Read more
+              %i.fa.fa-chevron-right
+          .col-md-3.news-item
+            %h2.title
+              %a{href: "#"} Some announcement!
             %p Some long and boring announcement.
             %a.read-more{:href => "news-single.html"}
               Read more
