Configure Google OAuth for Devise

--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -1,3 +1,4 @@
+=link_to t('menu.account.sign_out'), destroy_user_session_path, :method => :delete
 %header.header
   .header-main.container
     .container
