--- a/app/views/partials/_flash.haml
+++ b/app/views/partials/_flash.haml
@@ -1,4 +1,4 @@
 - flash.each do |key, value|
-  %div{:class => "alert alert-#{key}"}
+  %div{:class => "alert alert-#{bootstrap_alert_class(key)}"}
     %button.close{"data-dismiss" => "alert", :type => "button"} ×
     = value
