--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -77,6 +77,7 @@
                 =link_to t('menu.account.sign_in'), new_user_session_path
               %li
                 =link_to t('menu.account.sign_up'), new_user_registration_path
+      - if user_signed_in?
         %li.nav-item.dropdown
           %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdown", :href => "#"}
             %span.badge.visible-md-inline.visible-lg-inline{class: @alert_count > 0 ? "badge-warning" : ""}= @alert_count
