--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -41,7 +41,7 @@
             = t('nav.departments')
             %i.fa.fa-angle-down
           %ul.dropdown-menu
-            %li= link_to "All #{t('nav.departments')}", "#"
+            %li= link_to "All #{t('nav.departments')}", departments_path
         %li.nav-item.dropdown
           %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdown", :href => "#"}
             = t('nav.extracurriculars')
