--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -1,6 +1,7 @@
 .page-wrapper
   %header.page-heading.clearfix
     %h1.heading-title.pull-left= @department.name
+    = render partial: "partials/modtools", locals: {actions: @actions}
   .page-content
     .row.page-row
       .courses-wrapper.col-md-8.col-sm-7
