--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -42,12 +42,15 @@
             %i.fa.fa-angle-down
           %ul.dropdown-menu
             %li= link_to "All #{t('nav.departments')}", departments_path
+            - @departments.each do |department|
+              %li= link_to department.name, department
         %li.nav-item.dropdown
           %a.dropdown-toggle{"data-close-others" => "false", "data-delay" => "0", "data-hover" => "dropdown", "data-toggle" => "dropdown", :href => "#"}
             = t('nav.extracurriculars')
             %i.fa.fa-angle-down
           %ul.dropdown-menu
-            %li= link_to "All #{t('nav.extracurriculars')}", "#"
+            %li= link_to "Coming soon", "#"
+            /%li= link_to "All #{t('nav.extracurriculars')}", "#"
       %ul.nav.navbar-nav.pull-right
         %li.nav-item.red-white-display
           = link_to "#" do
