--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require flexslider
+ *= require jquery-ui
  *= require bootstrap/dist/css/bootstrap
  *= require font-awesome
  *= require college_green/theme
