--- a/app/views/admin/collaborator_groups/edit.haml
+++ b/app/views/admin/collaborator_groups/edit.haml
@@ -12,11 +12,35 @@
           %li.list-group-item
             = user.name
             %span.pull-right
-              %a.btn.btn-xs.btn-warning{href: admin_collaborator_group_remove_collaborator_path(@collaborator_group, user: user)}
+              %a.btn.btn-xs.btn-warning{href: admin_collaborator_group_remove_collaborator_path(@collaborator_group, user: user), data: {method: 'post'}}
                 %span.glyphicon.glyphicon-trash
       .panel-footer
         %b Search by name or email address
-        .input-group
-          %input.form-control{:placeholder => "Search", :type => "text",  "data-provide" => "typeahead"}
-          %span.input-group-btn
-            %button.btn.btn-default{:type => "button"} Add Collaborator
+        = form_for @collaborator_group, url: admin_collaborator_group_add_collaborator_path(@collaborator_group), method: :post do |f|
+          .input-group
+            %input#search.form-control{:placeholder => "Search", :type => "text",  "data-provide" => "typeahead"}
+            %span.input-group-btn
+              = f.submit "Add Collaborator", class: "btn btn-default"
+            %input#search_id{:name => "user", :type => "hidden"}/
+
+:javascript
+  $(function() {
+        $('#search').autocomplete({
+              minLength: 2,
+              source: '#{autocomplete_path(:json)}',
+              focus: function(event, ui) {
+                  $('#search').val(ui.item.label);
+                  return false;
+              },
+              select: function(event, ui) {
+                  $('#search').val(ui.item.label);
+                  $('#search_id').val(ui.item.value);
+                  return false;
+              }
+          })
+           .autocomplete( "instance" )._renderItem = function( ul, item ) {
+            return $( "<li>" )
+              .append( "<div>" + item.label + "<br>" + item.desc + "</div>" )
+              .appendTo( ul );
+          };
+      });
