--- a/app/views/departments/index.haml
+++ b/app/views/departments/index.haml
@@ -1,6 +1,7 @@
 .page-wrapper
   %header.page-heading.clearfix
     %h1.heading-title.pull-left Departments
+    = render partial: "partials/modtools", locals: {actions: @actions}
   .page-content
     .table-responsive
       %table.table
