Add phone number to departments, add some space above footer

--- a/app/views/admin/departments/_form.haml
+++ b/app/views/admin/departments/_form.haml
@@ -9,6 +9,9 @@
     = f.label :name
     = f.text_field :name, placeholder: "Name", class: "form-control"
   .form-group
+    = f.label :phone
+    = f.text_field :phone, placeholder: "Phone Number", class: "form-control"
+  .form-group
     = f.label :short_description
     = f.text_field :short_description, placeholder: "Short Description", class: "form-control"
   .form-group
