--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -12,7 +12,9 @@
           %h3.title
             %i.fa.fa-phone
             Contact Department
-          %p Call us at 000-000-0000
+          %p
+            Call us at
+            = @department.phone
         %section.widget.has-divider
           %h3.title
             %i.fa.fa-bell
