--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -2,6 +2,12 @@
   %header.page-heading.clearfix
     %h1.heading-title.pull-left= @department.name
     = render partial: "partials/modtools", locals: {actions: @actions}
+    %ul.nav.navbar-nav.pull-right
+      %li
+        - if @department.subscriber? current_user
+          %a{:href => unsubscribe_department_path(@department), data: {method: 'post'}} Unsubscribe
+        - else
+          %a{:href => subscribe_department_path(@department), data: {method: 'post'}} Subscribe
   .page-content
     .row.page-row
       .courses-wrapper.col-md-8.col-sm-7
