--- a/app/views/admin/departments/new.haml
+++ b/app/views/admin/departments/new.haml
@@ -6,4 +6,4 @@
   .container-fluid
     .row-fluid
       = render 'form'
-      = link_to 'Back',  departments_path
+      = link_to 'Back',  departments_path, class: "btn btn-warning pull-right"
