Integrate announcements with Scram through DSL, begin work on escalation request manaagement

--- a/app/views/admin/escalation_requests/new.haml
+++ b/app/views/admin/escalation_requests/new.haml
@@ -1,7 +1,7 @@
 %section.section.section-padded
   .section-header
     %h3
-      New Announcement
+      New Escalation Request
   .container-fluid
     .row-fluid
       = render 'form'
