--- a/app/views/admin/escalation_requests/edit.haml
+++ b/app/views/admin/escalation_requests/edit.haml
@@ -1,7 +1,7 @@
 %section.section.section-padded
   .section-header
     %h3
-      Edit Announcement
+      Edit Escalation Request
   .container-fluid
     .row-fluid
       = render 'form'
