--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -51,6 +51,10 @@
           %ul.dropdown-menu
             %li= link_to "Coming soon", "#"
             /%li= link_to "All #{t('nav.extracurriculars')}", "#"
+
+        - if user_signed_in? && current_user.super_admin?
+          %li.nav-item{class: active_controller('admin/base', 'index')}
+            = link_to t('nav.admin'), admin_root_path
       %ul.nav.navbar-nav.pull-right
         %li.nav-item.red-white-display
           = link_to "#" do
