--- a/app/views/alerts/index.haml
+++ b/app/views/alerts/index.haml
@@ -1,4 +1,8 @@
-%h1 Your alerts
-%ul
+%h1
+  Your alerts
+  %a.btn.btn-primary.pull-right{:href => read_all_alerts_path, :data => {:method => "post", :confirm => "Are you sure you want to mark all alerts as read?"}}
+    %i.fa.fa-tasks.fa-inverse
+    Mark all read
+%ul.list-group
   - @all_alerts.each do |alert|
-    = render partial: 'partials/alerts/alert', object: alert
+    %li.list-group-item= render partial: 'partials/alerts/alert', object: alert
