--- a/app/views/welcome/_announcements.haml
+++ b/app/views/welcome/_announcements.haml
@@ -9,61 +9,13 @@
   .section-content.clearfix
     #news-carousel.news-carousel.carousel.slide
       .carousel-inner
-        .item.active
-          .col-md-3.news-item
-            %h2.title
-              %a{href: "#"} Some announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-3.news-item
-            %h2.title
-              %a{href: "#"} Another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-3.news-item
-            %h2.title
-              %a{href: "#"} Yet another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-3.news-item
-            %h2.title
-              %a{href: "#"} Some announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-        .item
-          .col-md-3.news-item
-            %h2.title
-              %a{href: "#"} No way, another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-3.news-item
-            %h2.title
-              %a{href: "#"} Another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-3.news-item
-            %h2.title
-              %a{href: "#"} Yet another announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
-          .col-md-3.news-item
-            %h2.title
-              %a{href: "#"} Some announcement!
-            %p Some long and boring announcement.
-            %a.read-more{:href => "news-single.html"}
-              Read more
-              %i.fa.fa-chevron-right
+        - @announcements.in_groups_of(4).each_with_index do |announcement_group, index|
+          .item{class: index == 0 ? "active" : ""}
+            - announcement_group.reject(&:blank?).each do |announcement|
+              .col-md-3.news-item
+                %h2.title
+                  = link_to announcement.name, announcement
+                %p= truncate(announcement.content, length: 140)
+                = link_to announcement do
+                  Read more
+                  %i.fa.fa-chevron-right
