Add revision indicator

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -14,3 +14,9 @@
 .home-page .news .news-item {
   padding-left: 0px;
 }
+.footer .commit {
+  padding: 0px;
+  font-size: 11px;
+  color: #dcdcdc;
+  line-height: 3;
+}
