Add notes for EscalationRequests, make the panel more descriptive

--- a/app/views/admin/escalation_requests/_form.haml
+++ b/app/views/admin/escalation_requests/_form.haml
@@ -1,3 +1,6 @@
 = form_for [:admin, @escalation_request] do |f|
   = hidden_field_tag "#{@escalatable.class.to_s.downcase}_id", "#{@escalatable.id}"
+  .form-group
+    = f.label :note
+    = f.text_field :note, placeholder: "Briefly describe why you want frontpage visibility...", class: "form-control"
   = f.submit "Save Escalation Request", class: "btn btn-success pull-right", id: "submit-button"
